tests/error/modifier_errors/ctrl_arg_type.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with control(True):
        pass


test.compile()
