tests/error/modifier_errors/ctrl_arg_type.err
Error: Type mismatch (at $FILE:6:17)
  | 
4 | @guppy
5 | def test() -> None:
6 |     with control(True):
  |                  ^^^^ Expected expression of quantum type, got `bool`

Guppy compilation failed due to 1 previous error
